--- a/main.html
+++ b/main.html
@@ -45,6 +45,7 @@
   <script>
     function debounce(func, wait = 20, immediate = true) {
       var timeout;
+	
       return function() {
         var context = this, args = arguments;
         var later = function() {
@@ -57,6 +58,31 @@
         if (callNow) func.apply(context, args);
       };
     }
+	  function checkSlide() {
+    const images = document.querySelectorAll('.slide-in');
+
+    images.forEach(image => {
+      // Calculate the position of the image bottom
+      const slideInAt = window.scrollY + window.innerHeight - image.height / 2;
+      // Calculate the bottom of the image
+      const imageBottom = image.offsetTop + image.height;
+
+      // Check if the user has scrolled enough to reveal the image
+      const isHalfShown = slideInAt > image.offsetTop;
+      const isNotScrolledPast = window.scrollY < imageBottom;
+
+      if (isHalfShown && isNotScrolledPast) {
+        image.classList.add('active');
+      } else {
+        image.classList.remove('active');
+      }
+    });
+  }
+
+  window.addEventListener('scroll', debounce(checkSlide));
+
+  // Initial check to see if any images are in view on page load
+  window.addEventListener('load', checkSlide);
 
   </script>
 
@@ -73,7 +99,7 @@
       margin: 0;
     }
     
-    *, *:before, *:after {
+    * , *:before, *:after {
       box-sizing: inherit;
     }
 
